# heic2jpg

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  flatter.yml
build-aux/: dev.nordgedanken.heic2jpg.Devel.json  imagemagick.yaml  libde265.json  libheif.json
data/: dev.nordgedanken.heic2jpg.desktop.in.in  dev.nordgedanken.heic2jpg.gschema.xml.in  dev.nordgedanken.heic2jpg.metainfo.xml.in.in
data/resources/: resources.gresource.xml
po/: POTFILES.in  de.po  en.po  heic2jpg.pot
src/: app.rs  conversion_worker.rs  main.rs  select_folder.rs
src/modals/: about.rs
src/pages/: finished_page.rs  mod.rs  progressing_page.rs  select_folder.rs
src/workers/: conversion_worker.rs  mod.rs
