[package]
name = "heic2jpg"
version = "0.1.0"
authors = ["MTRNord <git@nordgedanken.dev>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
magick_rust = "1.0.0"
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_46"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
